<resources>
    <string name="app_name">Yummy</string>
    <string name="logo_ic">logo ic</string>
    <string name="onboarding_image">onboarding Image</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="add_it_to_your_calender">Add it to your calender</string>
    <string name="discover_it_s_ingredients">Discover it\'s ingredients</string>
    <string name="find_your_meal">Find your mealUiModel</string>
    <string name="get_start">Get Start</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_in_using">Or sign in using</string>
    <string name="please_enter_your_email_and_passowrd_to_enjoy">Please enter your email and passowrd to enjoy..</string>
    <string name="ic_facebook">ic facebook</string>
    <string name="ic_google">ic google</string>
    <string name="ic_twitter">ic twitter</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="google">Google</string>
    <string name="logo_ic_home">logo ic home</string>
    <string name="let_s_make_today_delicious">Let\'s make today delicious!</string>
    <string name="today_s_yummy_suggestion">Today\'s yummy suggestion :</string>
    <string name="meal_image">mealUiModel image</string>
    <string name="discover_more_meals">Discover more meals :</string>
    <string name="your_favorite_meals">Your Favorite Meals :</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="search_for_meals">Search for meal</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="no_internet">No Internet connection</string>
    <string name="failed_to_get_google_account">Failed to get Google account</string>
    <string name="no_meals_found_for_this_country">No Meals Found for this Country</string>
    <string name="no_meals_found_for_this_category">No Meals Found for this Category</string>
    <string name="no_meals_found_for_this_ingredient">No Meals Found for this Ingredient</string>
    <string name="no_meals_found_with_this_name">No Meals Found with this name</string>
    <string name="no_countries_found">No Countries Found now</string>
    <string name="no_categories_found">No Categories Found</string>
    <string name="no_ingredients_found">No Ingredients Found</string>
    <string name="retry">Retry</string>
    <string name="no_meals_for_today">No Meal for today</string>
    <string name="category_image">Category image</string>
    <string name="add_to_favorite_icon">add to favorite icon</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_image">ingredient image</string>
    <string name="instructions">Instructions</string>
    <string name="youtube">Youtube :</string>
    <string name="failure_loading">Error occurred please try again</string>
    <string name="no_internet_fav">No internet connection try to connect to see the meal details</string>
    <string name="no_favorites_yet_n_discover_our_meals_to_add_them_to_favorite">No Favorites Yet..\n Discover Our Meals To Add Them To Favorite.</string>
    <string name="no_favorites_icon">no favorites icon</string>
    <string name="failure_loading_meal_details">Error occurred please try again</string>
    <string name="your_week_plan">Your Week Plan :</string>
    <string name="no_plans_yet">No plans yet. \n Go to add new plans..</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_must_be">Password must be >=6 chars</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="weak_password">Weak password</string>
    <string name="something_went_wrong">Something went wrong, try again</string>
    <string name="unexpected_system_error">Unexpected system error</string>
    <string name="password_min_length">Password must be >=6 chars</string>
    <string name="email_not_registered">Email not registered</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="general_error">An error occurred</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="google_sign_in_cancelled">Sign in was cancelled</string>
    <string name="network_connection_error">Network connection error</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="plan">Plan</string>
    <string name="sign_in_required">Sign in required</string>
    <string name="you_are_browsing_as_a_guest_please_sign_in_to_continue">You are browsing as a guest. Please sign in to continue.</string>
    <string name="cancel">Cancel</string>
    <string name="delete_item_from_plan">Delete Meal Form Plan</string>
    <string name="delete_item_from_fav">Delete Meal Form Favorite</string>
    <string name="are_you_sure_you_want_to_delete_this_meal">
        Are you sure you want to delete this meal?
    </string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name : </string>
    <string name="logo_icon">logo_icon</string>
    <string name="your_email">Your Email :</string>
    <string name="email_profile">Email :</string>
    <string name="profile_menu"><![CDATA[profile /> </menu>]]></string>
    <string name="change">change</string>
    <string name="log_out">Log out</string>
    <string name="hello_my_chef_ni_hope_you_are_happy_with_our_meals">Hello My Chef !\nI hope you are happy with our meals</string>
    <string name="name">Name :</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="update_name_message_with_no_internet">No Internet Connection. Please check it to update your name..</string>
    <string name="save">Save</string>
    <string name="update_name">Update Name</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_valid_username">Name cannot be empty</string>
    <string name="sync_your_data">Sync your data</string>
    <string name="sync_data_successfully">Data synced Successfully !</string>
    <string name="we_recommend_you_to_sync_your_data_to_can_see_your_favorties_and_planned_meal_in_any_device">We recommend you to sync your data to can see your favorties and planned meal in any device.</string>
    <string name="no_meal_with_this_name">No meal with this name</string>
    <string name="success_delete_message">Deleted Successfully…</string>
</resources>