<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/profile"
        android:textColor="@color/blue_primary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileCard"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/logo_bg"
        app:cardCornerRadius="70dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTitle">

        <ImageView
            android:id="@+id/profileLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avatar" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/hello_my_chef_ni_hope_you_are_happy_with_our_meals"
        android:textColor="@color/blue_dark"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileCard" />


    <TextView
        android:id="@+id/userNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/name"
        android:textColor="@color/blue_primary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage" />

    <TextView
        android:id="@+id/userNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/blue_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/userNameTv"
        app:layout_constraintTop_toBottomOf="@id/welcomeMessage"
        tools:text="Hend Sayed" />

    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/email_profile"
        android:textColor="@color/blue_primary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameTv" />

    <TextView
        android:id="@+id/emailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/blue_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/emailTv"
        app:layout_constraintTop_toBottomOf="@id/userNameValue"
        tools:text="hend@gmail.com" />

    <TextView
        android:id="@+id/suggestMessgae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/we_recommend_you_to_sync_your_data_to_can_see_your_favorties_and_planned_meal_in_any_device"
        android:textColor="@color/blue_dark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailValue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/syncBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/sync_button_shape"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sync_your_data"
        android:textAllCaps="false"
        android:textColor="@color/blue_primary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/suggestMessgae" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logOutBtn"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/log_out_button_shape"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
