<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/noInternetAnimation"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:lottie_rawRes="@raw/no_internet"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/noInternetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/blue_primary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/noInternetAnimation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/noInternetSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_check_your_connection"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/blue_primary"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/noInternetText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_guest_button"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="40dp"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:textColor="@color/blue_dark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/noInternetSubText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>